--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 * {
     padding: 0;
     margin: 0;
@@ -43,7 +45,7 @@ header{
 }
 
 .header_list_general{
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 400;
     line-height: 20px;
@@ -90,7 +92,7 @@ header{
 }
 
 main h1{
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 54px;
@@ -103,4 +105,8 @@ main h1{
     font-size: 14px;
     text-align: center;
     color: #C0C0C0;
+}
+
+.main_text_padding{
+    padding: 18px 0;
 }
