--- a/css/style.css
+++ b/css/style.css
@@ -288,8 +288,14 @@ main h1{
     align-items: center;
 }
 
+.owl-stage{
+    display: flex;
+    align-items: center;
+}
+
 .clients_icons a{
     max-width: 128px;
+    display: inline-block;
 }
 
 .stars{
@@ -387,3 +393,4 @@ main h1{
     border-radius: 14px;
     margin-right: 7px;
 }
+
