--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 0px;
 }
 
 .header_logo{
@@ -37,40 +36,31 @@ header{
     align-items: center;
 }
 
-.header_list_large{
+.header_large{
     margin-left: 56px;
     padding: 0
 }
 
-.header_list_short{
+.header_short{
     margin-left: 32px;
     padding: 0;
 }
 
-.header_button_template{
-    margin-left: 31px;
-}
-
-.header_list_general{
+.header_general{
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 400;
     line-height: 20px;
-}
-
-.header_list_large_size{
+    color: #FFFFFF;
+    text-decoration: none;
     font-size: 15px;
-    color: #FFFFFF;
-    text-decoration: none;
 }
 
-.header_list_short_size{
-    font-size: 13px;
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-.header_button_template_style{
+.header_template{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
     font-size: 16px;
     color: #000000;
     background: #FFFFFF;
@@ -113,12 +103,12 @@ main h1{
 }
 
 .main_text{
-    font-size: 14px;
     text-align: center;
     color: #C0C0C0;
 }
 
 .main_text_padding{
+    font-size: 14px;
     padding: 18px 0;
 }
 
