--- a/css/media.css
+++ b/css/media.css
@@ -7,8 +7,16 @@
         height: calc(65vh - 83px);
     }
 
+    .main_text_padding{
+        padding: 16px 5px;
+    }
+
     main h1{
         font-size: 44px;
+    }
+
+    .help_style{
+        padding: 0 15px;
     }
 
     .help h2{
@@ -25,10 +33,6 @@
 
     .past_clients p{
         font-size: 18px;
-    }
-
-    .main_text_padding{
-        padding: 16px 5px;
     }
 }
 
