--- a/css/style.css
+++ b/css/style.css
@@ -337,11 +337,12 @@ main h1{
     display: flex;
     align-items: center;
     min-height: 540px;
-    margin-left: 100px;
+    box-sizing: border-box;
 }
 
 .tools .tools_item{
     max-width: 540px;
+    padding: 0 32px;
 }
 
 .tools h3{
@@ -374,6 +375,11 @@ main h1{
     line-height: 20px;
     color: #FFFFFF;
     margin-bottom: 20px;
+}
+
+.tools .position_bg .fixed_location{
+    justify-content: left;
+    position: relative;
 }
 
 .check_it_out{
