--- a/css/preproc.scss
+++ b/css/preproc.scss
@@ -62,7 +62,7 @@ header {
     font-weight: 400;
     line-height: 20px;
     font-size: 16px;
-    color: #000000;
+    color: $main_color;
     background: #FFFFFF;
     border-radius: 14px;
     padding: 9px 20px 13px 20px;
@@ -81,9 +81,6 @@ header {
     transform: translateZ(0);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-}
-
-.cd-header{
     &:after {
         content: "";
         display: table;
@@ -141,9 +138,6 @@ header {
     -webkit-transition: -webkit-transform 0.5s, left 0.5s, color 0.5s, background-color 0.5s;
     -moz-transition: -moz-transform 0.5s, left 0.5s, color 0.5s, background-color 0.5s;
     transition: transform 0.5s, left 0.5s, color 0.5s, background-color 0.5s;
-}
-
-.cd-marker {
     &::before {
         content: '';
         position: absolute;
@@ -220,7 +214,7 @@ main.nav-is-visible {
     -ms-transform: translateY(170px);
     -o-transform: translateY(170px);
     transform: translateY(170px);
-}
+    }
 }
 
 .container {
@@ -266,7 +260,7 @@ main{
         line-height: 59px;
         text-align: center;
         color: #FFFFFF;
-        }
+    }
 }
 
 .main_text {
@@ -336,12 +330,9 @@ main{
 }
 
 .what_we_do {
-    background-color: #000000;
+    background-color: $main_color;
     padding-top: 113px;
     padding-bottom: 100px;
-}
-
-.what_we_do{
     .container {
         max-width: 1168px;
     }
@@ -408,7 +399,7 @@ main{
             display: inline-block;
             height: 32px;
             width: 32px;
-            background-color: #000000;
+            background-color: $main_color;
             border-radius: 14px;
             margin-right: 7px;
         }
@@ -430,7 +421,7 @@ main{
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.4px;
-    color: #000000;
+    color: $main_color;
     text-decoration: none;
     display: inline-flex;
 }
@@ -468,13 +459,10 @@ main{
 }
 
 .tools {
-    background-color: #000000;
+    background-color: $main_color;
     min-height: 540px;
     position: relative;
     justify-content: left;
-}
-
-.tools {
     .position_bg {
         width: 50%;
         height: 100%;
@@ -529,7 +517,7 @@ main{
         display: inline-block;
         height: 32px;
         width: 32px;
-        background-color: #000000;
+        background-color: $main_color;
         border-radius: 14px;
         margin-right: 7px;
         }
@@ -547,7 +535,7 @@ main{
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.4px;
-    color: #000000;
+    color: $main_color;
     text-decoration: none;
     display: inline-flex;
 }
@@ -585,7 +573,7 @@ main{
 }
 
 .past_clients {
-    background-color: #000000;
+    background-color: $main_color;
     padding-top: 113px;
     padding-bottom: 140px;
     max-height: 500px;
@@ -664,7 +652,7 @@ main{
 }
 
 .help {
-    background-color: #000000;
+    background-color: $main_color;
     max-height: 414px;
     padding-top: 113px;
     padding-bottom: 108px;
@@ -693,7 +681,7 @@ main{
             display: inline-block;
             height: 32px;
             width: 32px;
-            background-color: #000000;
+            background-color: $main_color;
             border-radius: 14px;
             margin-right: 7px;
         }
@@ -718,7 +706,7 @@ main{
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.4px;
-    color: #000000;
+    color: $main_color;
     text-decoration: none;
     display: inline-flex;
 }
